[gd_scene load_steps=3 format=3 uid="uid://12llaao0w5gu"]

[ext_resource type="Script" uid="uid://dg4ahqxn0tu48" path="res://scripts/menus/objectives_menu.gd" id="1_8ewho"]
[ext_resource type="PackedScene" uid="uid://bnvthjaufhn5x" path="res://menus/audio_button.tscn" id="2_2wljw"]

[node name="ObjectivesMenu" type="AspectRatioContainer" node_paths=PackedStringArray("objective_tree")]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ewho")
objective_tree = NodePath("MarginContainer/VFlowContainer/ObjectiveTree")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 16
alignment = 1

[node name="ObjectiveHeader" type="Label" parent="MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Objectives"
horizontal_alignment = 1

[node name="ObjectiveTree" type="Tree" parent="MarginContainer/VFlowContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
columns = 3
column_titles_visible = true

[node name="BackButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_2wljw")]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="item_activated" from="MarginContainer/VFlowContainer/ObjectiveTree" to="." method="_on_objective_tree_item_activated"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/BackButton" to="." method="_on_back_pressed"]
